home base checkout pages complete. TODO: form pages

--- a/app/templates/base.html
+++ b/app/templates/base.html
@@ -2,7 +2,7 @@
 
 
 {% block title %}
-  Flask Bootstrap
+  Twitter Commerce - {{ title }}
 {% endblock %}
 
 
@@ -18,18 +18,67 @@
 
 
 {% block navbar %}
-  <nav>
-    <ul>
-      <li><a href="{{ url_for('index') }}">Home</a></li>
-    </ul>
-  </nav>
+  <div class="row">
+    <div class="col-md-12">
+      <nav class="navbar navbar-expand-lg navbar-dark bg-dark">
+        <a class="navbar-brand" href="{{ url_for('index') }}">Twitter</a>
+        <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarNav" aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
+          <span class="navbar-toggler-icon"></span>
+        </button>
+        <div class="collapse navbar-collapse" id="navbarNav">
+          <ul class="navbar-nav">
+            {% if title == 'Home' %}
+            <li class="nav-item active">
+            {% else %}
+            <li class="nav-item">
+            {% endif %}
+              <a class="nav-link" href="{{ url_for('index') }}">Home<span class="sr-only">(current)</span></a>
+            </li>
+
+
+            {% if title == 'Checkout' %}
+            <li class="nav-item active">
+            {% else %}
+            <li class="nav-item">
+            {% endif %}
+              <a class="nav-link" href="{{ url_for('checkout') }}">Checkout</a>
+            </li>
+
+            
+            {% if title == 'Title' %}
+            <li class="nav-item active">
+            {% else %}
+            <li class="nav-item">
+            {% endif %}
+              <a class="nav-link" href="#">Title</a>
+            </li>
+          </ul>
+        </div>
+      </nav>
+    </div> <!-- ends col 12 for nav -->
+  </div> <!-- ends row for nav -->
 {% endblock %}
 
 
 {% block content %}
-  {% block app_content %}{% endblock %}
+  <main>
+    <div class="container">
+      {% block app_content %}{% endblock %}
+    </div>
+  </main>
 
   <footer>
-    <p>This is a footer.</p>
+    <div class="row">
+      <div class="col-md-4">
+        <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Saepe enim ratione eos tempore itaque eaque neque. Ducimus reiciendis iusto iste repellat quas minus, magni voluptas, exercitationem delectus, corporis rerum sint.</p>
+      </div>
+      <div class="col-md-4">
+        <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Mollitia suscipit a soluta similique numquam eligendi cumque impedit, maiores obcaecati. Vel quia minima eos itaque repudiandae reiciendis voluptatibus recusandae quisquam ab.</p>
+      </div>
+      <div class="col-md-4">
+        <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Ut, totam odio neque deserunt ipsum beatae! Aliquam adipisci perspiciatis reprehenderit suscipit, explicabo omnis rem delectus mollitia? Modi culpa hic cupiditate, alias.</p>
+      </div>
+    </div>
   </footer>
+
 {% endblock %}
