--- a/app/templates/index.html
+++ b/app/templates/index.html
@@ -7,7 +7,11 @@
 {% block app_content %}
   <div class="row">
     <div class="col-md-12">
-      <h1>{{ title }}</h1>
+      {% if header != '' %}
+        <h1>{{ header }}</h1>
+      {% else %}
+        <h1>{{ title }}</h1>
+      {% endif %}
     </div>
   </div>
 
