--- a/app/static/css/main.css
+++ b/app/static/css/main.css
@@ -46,6 +46,32 @@ body {
   width: 80%;
   margin: 15px auto;
 }
+
+.post-img {
+  position: absolute;
+  top: 20px;
+  right: 20px;
+}
+
+.tweet {
+  margin-top: 60px;
+}
+
+.date, .handle {
+  color: gray;
+  position: absolute;
+  top: 20px;
+  left: 20px;
+}
+
+.handle {
+  top: 40px;
+}
+
+.small-margin {
+  margin-top: 25px;
+}
+
 footer {
   background-color: #343a40!important;
   margin-top: 100px;
