--- a/app/templates/base.html
+++ b/app/templates/base.html
@@ -59,6 +59,14 @@
             {% endif %}
               <a class="nav-link" href="{{ url_for('contact') }}">Contact Us</a>
 
+            {% if title == 'Profile' %}
+            <li class="nav-item active">
+            {% else %}
+            <li class="nav-item">
+            {% endif %}
+              <a class="nav-link" href="{{ url_for('profile') }}">Profile</a>
+            </li>
+
             {% if title == 'Login' %}
             <li class="nav-item active">
             {% else %}
