DB setup, TODO: user logins

--- a/app/templates/base.html
+++ b/app/templates/base.html
@@ -90,6 +90,15 @@
 
 
 {% block content %}
+  {% with messages = get_flashed_messages() %}
+    {% if messages %}
+      {% for message in messages %}
+        <script type="text/javascript">
+          alert(`{{ message }}`);
+        </script>
+      {% endfor %}
+    {% endif %}
+  {% endwith %}
   <main>
     <div class="container">
       {% block app_content %}{% endblock %}
