--- a/app/templates/profile.html
+++ b/app/templates/profile.html
@@ -24,7 +24,7 @@
         <div class="card small-margin">
           <img src="http://placehold.it/25x25" alt="Profile Pic" class="post-img">
           <div class="card-title tweet">{{ post.tweet }}</div>
-          <div class="card-subtitle date">{{ post.date_posted }}</div>
+          <div class="card-subtitle date">{{ post.date_posted.date() }}</div>
           <div class="card-subtitle handle">@suitboy</div>
         </div>
       {% endfor %}
