--- a/app/templates/profile.html
+++ b/app/templates/profile.html
@@ -7,25 +7,28 @@
     <div class="col-md-4">
       <div class="card">
         <img src="http://placehold.it/250x250" alt="Placeholder" class="card-img">
-        <div class="card-title">Max Smith</div>
-        <div class="card-subtitle">@suitboy</div>
+        <div class="card-title">{{ user.first_name }} {{ user.last_name }}</div>
+        <div class="card-subtitle">@ {{ user.username }}</div>
         <div class="card-text">
-            <p>All about dem suits baby!</p>
+            <p>{{ user.bio }}</p>
         </div>
         <button class="btn btn-primary">Follow</button>
       </div>
     </div> <!-- ends col 4 for profile info -->
 
     <div class="col-md-8">
-      <div class="card">
-        {{ wtf.quick_form(form) }}
-      </div>
-      {% for post in posts[::-1] %}
+      {% if user.username == current_user.username %}
+        <div class="card">
+          {{ wtf.quick_form(form) }}
+        </div>
+      {% endif %}
+
+      {% for post in user.posts[::-1] %}
         <div class="card small-margin">
           <img src="http://placehold.it/25x25" alt="Profile Pic" class="post-img">
           <div class="card-title tweet">{{ post.tweet }}</div>
           <div class="card-subtitle date">{{ post.date_posted.date() }}</div>
-          <div class="card-subtitle handle">@suitboy</div>
+          <div class="card-subtitle handle">{{ user.username }}</div>
         </div>
       {% endfor %}
 
